# Sem-3-Project

./: .gitignore  README.md
GhibliLens/: .gitignore  README.md  docker-compose.yml
GhibliLens/.github/workflows/: deploy-cloud-run.yml
GhibliLens/backend/: .env.example  Dockerfile  demo_pipeline.py  pyproject.toml  test_pipeline.py
GhibliLens/backend/app/: config.py  main.py
GhibliLens/backend/app/models/: schemas.py
GhibliLens/backend/app/routers/: jobs.py  video.py
GhibliLens/backend/app/services/: consistency_service.py  controlnet_service.py  ffmpeg_service.py  job_manager.py  replicate_service.py
GhibliLens/backend/app/utils/: file_utils.py  validators.py
GhibliLens/backend/demo_output/: audio.aac
GhibliLens/frontend/: index.html  package-lock.json  package.json
GhibliLens/frontend/src/: App.jsx  index.css
GhibliLens/frontend/src/api/: client.js
GhibliLens/frontend/src/components/: ComparePlayer.jsx  DownloadButton.jsx  ProgressBar.jsx  UploadZone.jsx  VideoTrimmer.jsx
GhibliLens/frontend/src/hooks/: useUpload.js  useVideoMeta.js
GhibliLens/frontend/src/styles/: index.css
